# CinaBox

./: .gitmodules  CMakeLists.txt  README.md  cinabox.cpp  cinabox.h  cinabox.hpp  defer.hpp  handle.hpp  plugin.c  plugin.cpp  plugin.hpp  test.cpp
.github/workflows/: cmake-multi-platform.yml
libs/: .gitignore  CMakeLists.txt  includeable.cmake  includeable.hpp  romfs_materialize.hpp
test/: plugin.c  target.c  test.cpp  test.cppapi.cpp
